Typos und Kleinigkeiten korrigiert/verändert

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -7,7 +7,7 @@
 %Vorsitzender Richter (inkl. Wahl → aktives/passives Wahlrecht)
 %\subsection{Geschäftsordnung} % GO ist für Kapitel "Innere Organisation" geplant – braucht es hier eine eigene Überschrift?
 %Exkurs(?): Geschäftsordnung (hier Ersatzrichter mit Stimmrecht?)
-Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{MISSING: Kommentare}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
+Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{\cite[\S~14 Rn.~3]{ipsen2008parteiengesetz}}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
 Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{MISSING: Satzungen}
 
 \section{Das Organ Schiedsgericht und seine Zusammentzung}
@@ -22,7 +22,7 @@ Die Schiedsgerichtsordnung hat diese in \S~3 Abs.~1 Satz~2 SGO\index[paridx]{SGO
 
 \section{Der Spruchkörper Schiedsgericht und seine Zusammensetzung}
 \label{Zusammensetzung:Spruchkoerper}
-Das Schiedgericht im Sinne des entscheidenen Spruchkörpers\index[idx]{Spruchkörper|textbf} für konkrete Verfahren setzt sich dahingegen nach \S~3 -- \S~5 SGO\index[paridx]{SGO!\S~3}\index[paridx]{SGO!\S~4}\index[paridx]{SGO!\S~5} zusammen. Dabei ist im Folgenden mit Schiedsgericht nicht mehr das Organ, sondern der Spruchkörper für eine konkrete Anrufung gemeint.
+Das Schiedgericht im Sinne des entscheidenen Spruchkörpers\index[idx]{Spruchkörper|textbf} für konkrete Verfahren setzt sich dahingegen nach \SSS~3--5 SGO\index[paridx]{SGO!\S~3}\index[paridx]{SGO!\S~4}\index[paridx]{SGO!\S~5} zusammen. Dabei ist im Folgenden mit Schiedsgericht nicht mehr das Organ, sondern der Spruchkörper für eine konkrete Anrufung gemeint.
 
 \subsection{Besetzung}
 \label{Zusammensetzung:Spruchkoerper:Besetzung}
@@ -36,7 +36,7 @@ Auf die Besonderheiten der Besetzung des Bundesschiedsgerichtes aufgrund der erh
 \subsection{Änderung der Besetzung}
 \label{Zusammensetzung:Spruchkoerper:Aenderung}
 Die Besetzung\index[idx]{Besetzung|textbf} des Gerichts darf nur in den dafür vorgesehenen Fällen verändert werden.
-Dies liegt daran, dass Art.~101 Abs.~2 Satz~2 GG\index[paridx]{GG!Art.~101!Abs.~2 Satz~2} jedermann das Recht auf den gesetzlichen Richter garantiert.
+Dies liegt daran, dass Art.~101 Abs.~2 Satz~2 GG\index[paridx]{GG!Art.~101!Abs.~2 Satz~2} jedermann das Recht auf den \emph{gesetzlichen Richter} garantiert.
 Der gesetzliche Richter ist allerdings nur der, der aufgrund des geltenden Rechts zum Klageeinreichungszeitpunkt dazu bestimmt war.
 Dies schließt jede Modifikation durch Einzelfallbeschluss aus.
 Einzig und allein die vom Gesetz vorgesehen Gründe können daher zu einer Besetzungsänderung führen.
@@ -55,10 +55,10 @@ Insgesamt gibt folgende Gründe für eine Besetzungsänderung:
 \label{Zusammensetzung:Spruchkoerper:Besetzungausschlussbeschluss}
 Die Satzung äußert sich nicht konkret zu der Frage, wer an der Entscheidung über den Ausschluss eines Richters mitabstimmen darf.
 \S~4 Abs.~4 Satz~2 Alt.~2 SGO\index[paridx]{SGO!4@\S~4!4@Abs.~4} sagt lediglich aus, dass die Beschlussfähigkeit auch mit zwei Richtern gegeben ist.
-Aus dem Grundsatz, dass niemand Richter in eigener Sache sein darf\footnote{lat.: nemo iudex in sua causa.}, folgt schon, dass der betroffene Richter selbst nicht mitentscheiden darf. Für die Fälle des \S~5 SGO\index[paridx]{SGO!\S~5} ist das auch ausdrücklich in der Schiedsgerichtsordnung niedergelegt, aber auch in den anderen Fällen muss dieser Grundsatz gelten.
+Aus dem Grundsatz, dass niemand Richter in eigener Sache sein darf,\footnote{lat.: \emph{nemo iudex in sua causa}.} folgt schon, dass der betroffene Richter selbst nicht mitentscheiden darf. Für die Fälle des \S~5 SGO\index[paridx]{SGO!\S~5} ist das auch ausdrücklich in der Schiedsgerichtsordnung niedergelegt, aber auch in den anderen Fällen muss dieser Grundsatz gelten.
 In Betracht kommen daher zwei denkbare Besetzungen: Die verbleibenden Richter der bisherigen Spruchkörperbesetzung entscheiden über den Ausschluss des Richters oder aber \S~4 Abs.~2 Satz~1 SGO\index[paridx]{SGO!4@\S~4!2@Abs.~2} nicht nur die schon per Beschluss ausgeschlossenen Richter umfasst, sondern auch die, über die konkret beschieden werden soll.
 Die sonstigen Regeln, insbesondere über die Beschlussfähigkeit, sagen dazu nichts.
-Allerdings deutet schon der Wortlaut \enquote{Notbesetzung} an, dass es nicht der Normalfall sein soll.
+Allerdings deutet schon der Wortlaut \Zitat{Notbesetzung} an, dass es nicht der Normalfall sein soll.
 Der Satzung lassen sich keine Indizien für absichtliche Redundanz der Betonung des Sonderfalls entnehmen.
 Daher ist rückt schon für den Beschluss über den Richterausschluss der in der Rangfolge nächste Ersatzrichter temporär ein und entscheidet über den Ausschluss mit.
 Dass dies geboten ist, ergibt sich auch schon zwingend aus der Möglichkeit, das zwei Richter nicht erreichbar sein könnten.
@@ -72,7 +72,7 @@ Diese Vorgehensweise, obschon nie ausführlich begründet, entspricht auch der j
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Untätigkeit}
 \label{Zusammensetzung:Spruchkoerper:Untaetigkeit}
-Der Ausschluss eines Richters wegen Untätigkeit kann dann Beschlossen werden, wenn ein Richter auch auf Nachfrage nicht mitarbeitet und so die Beschlussfähigkeit des Gerichts in dem Verfahren gefährdet.
+Der Ausschluss eines Richters wegen Untätigkeit kann dann beschlossen werden, wenn ein Richter auch auf Nachfrage nicht mitarbeitet und so die Beschlussfähigkeit des Gerichts in dem Verfahren gefährdet.
 \S~4 Abs.~1 SGO\index[paridx]{SGO!4@\S~4!1@Abs.~1} fordert dafür, dass der Richter bereits an Zusammentreffen oder Beratungen in einem anderen Format, etwa per E-Mail-Verkehr im Bezug auf eine konkretes Verfahren nicht beteiligt hat, die übrigen Richter diesen Richter konkret zur Mitarbeit ermahnt haben und ihm dazu eine Frist von mindestens 13 Tagen gegeben haben, sich doch noch einzubringen.
 Wenn der Richter trotz alldem nicht reagiert oder sich trotzdem aktiv weigert, mitzuarbeiten und so das Verfahren bzw. Beschlussfassung blockiert, damit die Verfahrensdauer ohne Grund die Länge treibt und den Rechtsschutzanspruch der Streitparteien vereitelt, soll dies nicht zu Lasten der Streitparteien gehen.
 In diesem Fall blockiert der gesetzliche Richter gerade den Anspruch auf effektiven Rechtsschutz und entzieht so aktiv den gesetzlichen Richter, der gerade nicht entzogen werden darf.
@@ -82,7 +82,7 @@ Sie ist dann geboten, wenn anders kein Fortschritt im Verfahren erzielt werden k
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Krankheit}
 \label{Zusammensetzung:Spruchkoerper:Krankheit}
-Der Ausschluss eines Richters wegen Krankheit gemäß \S~4 Abs.~3 Satz~1 Alt.~1 SGO.\index[paridx]{SGO!4@\S~4!3@Abs.~3} ist etwas anders geartet.
+Der Ausschluss eines Richters wegen Krankheit gemäß \S~4 Abs.~3 Satz~1 Alt.~1 SGO\index[paridx]{SGO!4@\S~4!3@Abs.~3} ist etwas anders geartet.
 Hier kommt regelmäßig eine Ablehnung schon gar nicht in Betracht.
 Wenn ein Richter sich dem Gericht gegenüber krank meldet, ist dies hinzunehmen und den Parteien mitzuteilen.
 Die Krankmeldung ist dabei zu den Akten zu nehmen.
@@ -91,14 +91,14 @@ Der Ausschluss ist auch insofern anders, als dass er für alle aktuell laufenden
 Die Meldung der Krankheit ist daher eine temporäre Amtsniederlegung.
 Allerdings ist die Schiedsgerichtsordnung an dieser Stelle hochproblematisch, da sie von einem lediglich temporären Ausscheiden und der Möglichkeit der Rückkehr in das Verfahren ausgeht.
 Dies würde Prozesstaktiken ermöglichen, die defacto einer parteigetriebenen Richterauswahl nahekommen, indem das Verfahren von Seite der Streitpartei versucht wird, zu beschleunigen oder zu verzögern.
-Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist.\footnote{So schon \cite[299]{BVerfGE17294}: \enquote{Art. 101 Abs. 1 Satz 2 GG soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht}.}
+Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist.\footnote{So schon \cite[299]{BVerfGE17294}: \Zitat{Art.~101 Abs.~1 Satz~2~GG soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht}.}
 Auch angesichts typischer Verfahrensdauern im Rahmen der erlaubten Verfahrensmaximalsolldauer ist jeder Zeitraum, der überhaupt zu einem temporären Ausscheiden eines Richters führt, schon so relevant, dass das Verfahren vom eingerückten Ersatzrichter maßgeblich mitbeeinflusst werden konnte.
 Daher muss auch dieser weiterhin dem Spruchkörper angehören.
 Entsprechend kann ein einmal ersetzter Richter nicht wieder in ein Verfahren zurückkehren, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.\footnote{So auch etwa \cite[Eschelbach][\S~15 Rn~31]{BVerfGGMitarbeiterKommentar} entsprechend für das Bundesverfassungsgericht. Dieser geht davon aus, dass ein Rückkehr in die Richterolle im Spruchkörper für den Vorsitzenden nur dann möglich ist, wenn er lediglich in seiner Rolle als Vorsitzener etwa wegen Heiserkeit, nicht aber in der Rolle als Richter gänzlich wegfiel.}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Beurlaubung}
 \label{Zusammensetzung:Spruchkoerper:Urlaub}
-In die selbe Kategorie wie der Ausschluss eines Richters wegen Krankheit fällt der Ausschluss eines Richters wegen Beurlaubung gemäß \S~4 Abs.~3 Satz~1 Alt.~2 SGO.\index[paridx]{SGO!4@\S~4!3@Abs.~3}.
+In die selbe Kategorie wie der Ausschluss eines Richters wegen Krankheit fällt der Ausschluss eines Richters wegen Beurlaubung gemäß \S~4 Abs.~3 Satz~1 Alt.~2 SGO.\index[paridx]{SGO!4@\S~4!3@Abs.~3}
 Hier gelten aber die Bedenken über die Prozessmanipulation in Richtung einer effektiv parteigetriebenen Richterauswahl umso mehr, da das Ende der voraussichtlichen Abwesenheit noch besser vorhersehbar ist.
 Daher muss hier das gleiche gelten: Die Regelung ist bezüglich des Widereinstritts eines beurlaubten Richters in das Verfahren unwirksam und ein Widereinstritt ausgeschlossen, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.
 
@@ -114,7 +114,7 @@ Dies Schiedsgerichtsordnung garantiert in \S~5 Abs.~2 SGO\index[paridx]{SGO!5@\S
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis:Prozessuales}
 Einen Antrag auf Ablehnung eines Richters wegen Besorgnis eines Richters kann nur eine Verfahrenspartei stellen, nicht aber der Richter selber.
 
-Der Antrag muss immer begründet sein, \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.~3}, und sich gegen einene einzelnen Richter richten, andernfalls ist er unzulässig.\footnote{\cites[S.~1]{BSG201305062BefangenheitI}{BGHIIARZ101}.}
+Der Antrag muss immer eine Begründung enthalten, \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.~3}, und sich gegen einene einzelnen Richter richten, andernfalls ist er unzulässig.\footnote{\cites[S.~1]{BSG201305062BefangenheitI}{BGHIIARZ101}.}
 Eine Ablehnung des ganzen Gerichts auf einmal ist also nicht möglich, allerdings können durchaus mehrere oder sogar alle Richter eines Gerichts jeweils einzeln nacheieinader abgelehnt werden.
 Entscheidend für die Bescheidungsreihenfolge ist ann die Reihenfolge der Antragstellung.
 In besonderen Fällen ist sogar der Verweis auf die gleiche Begründung für mehrere Richter zulässig, nämlich immer dann, wenn vorgetragen wird, das die die Besorgnis der Befangenheit tragende Tatsache auf mehrere Richter jeweils individuell gleichzeitig zutrifft.
@@ -131,7 +131,7 @@ Beiden Parteien daraufhin noch eine Gelegenheit zur Stellungnahme zu geben, \S~5
 
 \subsubsection{Tatbestand der Besorgnis der Befangenheit}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis:Tatbestand}
-Für den Beschluss, ob ein Richter im Verfahren bleibt, oder wegen Besorgnis der Befangenheit aus dem Verfahren ausscheidet, muss entschieden werden, ob ein neutraler, objektiver fiktiver Dritter, der in Kenntnis der Tatsachen zu entscheiden hätte, einen gerechtfertigten Grund hätte, an dem Unparteilichkeit des Richters zu zweifeln, \S~5 Abs.~2 Satz~2.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
+Für den Beschluss, ob ein Richter im Verfahren bleibt, oder wegen Besorgnis der Befangenheit aus dem Verfahren ausscheidet, muss entschieden werden, ob ein neutraler, objektiver, fiktiver Dritter, der in Kenntnis der Tatsachen zu entscheiden hätte, einen gerechtfertigten Grund hätte, an dem Unparteilichkeit des Richters zu zweifeln, \S~5 Abs.~2 Satz~2.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
 Dies ist noch nicht erfüllt, wenn der Richter einer speziellen parteiinternen Organisation oder einem Flügel angehört.\footnote{\cite[S.~6]{BSG115HSBefangeheitIII}.}
 Ebenfalls genügt dafür nicht, dass der Richter sich bereits früher mal über eine verfahrensrelevante Rechtsfrage geäußert hat,\footnote{\cite{BGHXIZR38801}.} die Partei muss dann damit leben, dass ihr gesetzlicher Richter in einem rechtlichen Meinungsstreit eine gewisse Position vertritt.
 Erst Recht gilt dies in einer Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
@@ -142,25 +142,25 @@ Erst recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon au
 Es kann auch sein, dass ein Antrag auf Richterablehnung eigentlich zulässig wäre, aber im speziellen Fall rechtsmissbräuchlich ist und daher als unzulässig abzulehnen ist.
 Dies ist eine wertende Entscheidung und nicht eine bloße Formalentscheidung und muss daher in der geänderten Besetzung nach \SSS~5 Abs.~5, 4 Abs.~2 SGO\index[paridx]{SGO!5@\S~5!5@Abs.~5}\index[paridx]{SGO!4@\S~4!2@Abs.~2} beschieden werden.
 Allerdings kann auf die Stellungnahme und die Anhörung der Parteien verzichtet werden, wenn die geänderte Besetzung direkt zur Überzeugung gelangt, dass der Antrag rechtsmissbräuchlich ist, da dann kein zulässiger Ablehnungsantrag vorliegt.
-Im Zweifel gilt allerdings immer: Eine Anhörung zu viel schadet nicht, eine Anhörung zu wenig kann zur Aufhebung des Urteils führen.
+Im Zweifel gilt allerdings immer: \Zitat{Eine Anhörung zu viel schadet nicht, eine Anhörung zu wenig kann zur Aufhebung des Urteils führen.}
 
-Rechtsmissbräuchlich ist der Antrag auf Richterablehnung, wenn er nur gestellt wird, um das Verfahren aufzuhalten\footnote{\cites[S.~8]{BSG2815HS}.}, das Gericht zu überlasten oder mit offensichtlich nicht aussichtsreichen Befangenheitsanträgen zu bombardieren\footnote{\cites[S.~4]{BSG201305062BefangenheitII}.} oder einen nicht genehmen Richter allein wegen seiner Spruchtätigkeit oder Rechtsüberzeugung abzulehnen\footnote{\cites[S.~5]{BSG115HSBefangeheitIV}{OLGNaumburg3WF7609}.}
+Rechtsmissbräuchlich ist der Antrag auf Richterablehnung, wenn er nur gestellt wird, um das Verfahren aufzuhalten,\footnote{\cites[S.~8]{BSG2815HS}.} das Gericht zu überlasten oder mit offensichtlich nicht aussichtsreichen Befangenheitsanträgen zu bombardieren,\footnote{\cites[S.~4]{BSG201305062BefangenheitII}.} oder einen nicht genehmen Richter allein wegen seiner Spruchtätigkeit oder Rechtsüberzeugung abzulehnen.\footnote{\cites[S.~5]{BSG115HSBefangeheitIV}{OLGNaumburg3WF7609}.}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen satzungsmäßig unwiderlegbar vermuteter Befangenheit}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung}
 Ein Richter kann durch eine Streitpartei nach \S~5 Abs.~2 Satz~1 Alt.~2, Abs.~1 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} abgelehnt werden.
 Die Möglichkeit, dass die Streitparteien einen solchen Antrag stellen können, darf aber nicht über die Natur des \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} täuschen.
-Es geht dabei um eine Vorschrift, die von Amts wegen von jedem Gericht gerpüft werden muss, bevor ein Richter an einem Verfahren teilnehmen kann\footnote{So auch schon \cite{BSGPP100127862}, daher die dortige Vorabprüfung.}. \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} stellt verschiedene objektive Bedingungen auf, die ohne wertenen Ermessenspielraum verbieten, dass ein Richter sein Amt in einem Verfahren ausübt.
+Es handelt sich hier um eine Vorschrift, die von Amts wegen von jedem Gericht gerpüft werden muss, bevor ein Richter an einem Verfahren teilnehmen kann.\footnote{So auch schon \cite{BSGPP100127862}, daher die dortige Vorabprüfung.} \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} stellt verschiedene objektive Bedingungen auf, die ohne wertenden Ermessenspielraum verbieten, dass ein Richter sein Amt in einem Verfahren ausübt.
 
 \subsubsection{Prozessual Grundlegendes}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Prozessuales}
 \S~5 Abs.~1 Satz~2 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} fordert lediglich, dass ohne den betroffenen Richter beschieden wird.
-Insofern rückt der in der Rangfolge nächste Ersatzrichter für diese Entscheidung in den Spruchkörper ein und die Parteien sind davon in Kenntnis zu setzen, \S~4 Abs.~2 Satz~2 SGO.\index[paridx]{SGO!4@\S~4!2@Abs.~2}
+Insofern rückt der in der Rangfolge nächste Ersatzrichter für diese Entscheidung in den Spruchkörper ein und die Parteien sind davon in Kenntnis zu setzen, \S~4 Abs.~2 S.~2 SGO.\index[paridx]{SGO!4@\S~4!2@Abs.~2}
 Weitere Vorschriften macht die SGO nicht für den Fall, dass die von Amts wegen zu treffende Entscheidung, ob ein Richter von der Ausübung seines Amtes ausgeschlossen ist, beschieden wird.
 Anders könnte es aussehen, wenn eine Streitpartei die Entscheidung darüber nach \S~5 Abs.~2 Satz~1 Alt.~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} beantragt hat.
 Denn dem Wortlaut der Schiedsgerichtsordnung nach treffen die prozessualen Vorschriften des \S~5 Abs.~2 ff. SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2}
 Demnach wäre das Verfahren unterschiedlich, je nachdem, ob es durch einen Antrag einer Streitpartei ausgelöst wird oder von den Richtern selbst.
-Dafür gibt es allerdings keinen Grund, der das sachlich rechtfertigen würde.
+Es gibt es allerdings keinen Grund, der das sachlich rechtfertigen würde.
 Daher müssen die Prozessvorschriften des \S~5 Abs.~2 ff. SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} einzeln geprüft werden, ob sie auf die Eigenheiten der Richterablehnung wegen satzungsmäßigem Ausschlussgrund anwendbar sind oder nicht.
 Für den Fall, dass sie anwendbar sind, müssen sie in beiden denkbaren Verfahrenswegen angewendet werden.
 
@@ -220,7 +220,7 @@ Die Tatbestände des \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} gliedern
 Die erste Gruppe von Tatbeständen (Nr.~1 -- Nr.~5) erfassen Konstellationen, in denen die Satzung dem Richter aufgrund seiner persönlichen Nähe zu den \textbf{Verfahrensparteien} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
 Die Gruppe lässt sich nochmal in zwei Untergruppen unterteilen:
 Die erste Untergruppe (Nr.~1 -- Nr.~3) begründet die Nähe in der personenstandsrechtlichen Nähe zu den Verfahrensparteien und dem darin vermuteten Interessenkonflikt.
-Die zweite Untergruppe (Nr.~4 -- Nr.~4) begründet die Nähe durch die Möglichkeit der Einflussnahme auf die Entscheidungsfindung in der konkreten Sache sowie generell. Auch die Möglichkeit, etwa schon Prozessstrategien oder anderes Vorwissen zum Verfahrensgegenstand aus Sicht der Partei zu kennen, dürfte hier eine Rolle gespielte haben für den Satzungsgeber. Insofern ist die Untergruppe auch verwandt mit der zweiten Gruppe.
+Die zweite Untergruppe (Nr.~4 -- Nr.~5) begründet die Nähe durch die Möglichkeit der Einflussnahme auf die Entscheidungsfindung in der konkreten Sache sowie generell. Auch die Möglichkeit, etwa schon Prozessstrategien oder anderes Vorwissen zum Verfahrensgegenstand aus Sicht der Partei zu kennen, dürfte hier eine Rolle gespielte haben für den Satzungsgeber. Insofern ist die Untergruppe auch verwandt mit der zweiten Gruppe.
 
 Die zweite Gruppe von Tatbeständen (Nr.~6 -- Nr.~7) erfassen Konstellationen, in denden die Satzung dem Richter aufgrund seiner persönlichen Nähe zum \textbf{Verfahrensgegenstand} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
 
@@ -230,7 +230,7 @@ Die dritte Gruppe umfasst nur noch einen Tatbestand (Nr.~8), und somit die Konst
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr1}
 \S~5 Abs.~1 Satz~1 Nr.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}
 Es versteht sich von selbst, dass ein Richter in Verfahren, denen er selbst Verfahrenspartei ist, nicht mitentscheiden soll.
-Dies war auch schon vor Einführung des Tatbestandes aus dem allgemeinen Rechtsgrundsatz automatisches Praxis der Parteirechtssprechung\footnote{So hat das damalige Bundesschiedsgericht es in \cite{BSG3014HS}, \cite{BSG4414HS} und \cite{BSG3215HS} etwa schon gar nicht mehr für nötig gehalten, zur Erläutern, warum der zur ordentlichen Besetzung gehörende Richter Florian Zumkeller-Quast an der tenorierten Entscheidung nicht teilnahm.}, wurde aber nun explizit in der Satzung festgehalten.
+Dies war auch schon vor Einführung des Tatbestandes aus dem allgemeinen Rechtsgrundsatz automatisches Praxis der Parteirechtssprechung,\footnote{So hat das damalige Bundesschiedsgericht es in \cite{BSG3014HS}, \cite{BSG4414HS} und \cite{BSG3215HS} etwa schon gar nicht mehr für nötig gehalten, zur Erläutern, warum der zur ordentlichen Besetzung gehörende Richter Florian Zumkeller-Quast an der tenorierten Entscheidung nicht teilnahm.} wurde aber nun explizit in der Satzung festgehalten.
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~2 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr2}
@@ -256,7 +256,7 @@ Eine enge Auslegung wird der Rechtsfolge und somit dem Normcharakter eher gerech
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr4}
-\S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} vermutet unwiderleglich, dass ein Richter unwiderleglich als befangen gilt, wenn eine der Personen nach Nr.1 -- 3 einem Organ angehören, dass Streitpartei ist.
+\S~5 Abs.~1 Satz~1 Nr.~4 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} vermutet unwiderleglich, dass ein Richter unwiderleglich als befangen gilt, wenn eine der Personen nach Nr.~1--3 einem Organ angehören, dass Streitpartei ist.
 Organ ist hier jedes Organ des Bundesverbandes oder einer Parteigliederung, die grundsätzlich immer aktiv- und passivlegitimiert sind.\footnote{Dazu siehe \ref{Standardworkflow:Parteifaehigkeit}.}
 
 Auch diese Vorschrift deutet im Übrigen an, dass der Satzungsgeber bei Nr.~3 keine große, unübersichtliche Personengruppe im Blickfeld hatte und daher die vorgeschlagene enge Auslegung dort geboten ist.
@@ -276,7 +276,7 @@ Die Gründungsversammlung ist von ihrer Natur her in der Piratenpartei dem Parte
 Diese Auslegung findet schon keinen Halt im Wortlaut, sondern würde eine Reduktion nach dem Sinn der Norm darstellen.
 Warum diese geboten sein soll, hat das Bundesschiedsgericht nicht begründet.
 Im Gegenteil, der Tatbestand von Nr.~1 in Verbindung mit Nr.~4 könnte in dieser Auslegung des Bundesschiedsgerichtes schon in gar keiner denkbaren Situation verwirklicht werden, wäre also eine leere Norm.
-Nach der systematischen Auslegung darf es aber keine leeren Normen geben, da jede Regelung irgendeinen Sinn und Zweck haben muss.\footnote{Siehe zur systematischen Auslegung auch \ref{Normenauslegung:Auslegung:Methoden:Systematisch}.}
+Nach der systematischen Auslegung darf es aber keine leeren Normen geben, da jede Regelung irgendeinen Sinn und Zweck hat.\footnote{Siehe zur systematischen Auslegung auch \ref{Normenauslegung:Auslegung:Methoden:Systematisch}.}
 Daher ist die nicht weiter begründete Auslegung des Bundesschiedsgerichtes nicht haltbar, vielmehr sind Parteitage gerade nach dem dem Wortlaut entnehmenbaren Willen des Satzungsgebers auch erfasst.
 
 Dies führt jedoch dazu, dass Landesschiedgerichte nie Anfechtungen gegen Entscheidungen ihres eigenen Landesparteitages verhandeln dürfen, da alle Richter zugleich Mitglieder des Landesverbandes sind und als solches Mitglieder des Organs Parteitag.
