--- a/Organisation.tex
+++ b/Organisation.tex
@@ -6,7 +6,7 @@
 %\section{Personalsachen}
 %\subsection{Vorsitz, Richter, Ersatzrichter}
 %\subsection{Aus- und Fortbildungsmaßnahmen}
-%z.B. dieses Handbuch, Schulungsveranstaltungen, SG-Koordinations-ML, Lektüre der Urteile anderer Schiedsgerichte
+%z.B. dieses Handbuch, Schulungsveranstaltungen, SG-Koordinations-ML, Lektüre der Urteile anderer Schiedsgerichte, MIP als frei verfügbare, wissenschaftliche Quelle
 
 %\section{Infrastruktur}
 
